--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1175,7 +1175,7 @@ will-change: transform, opacity, filter;
 }
 
 html, body{
-  background: #f7f7fb;
+  background: #F3F2EF;
 }
 
 body{
